--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -8,7 +8,7 @@ Resources:
       FunctionName: search-photos
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
-      CodeUri: ./lambdaAlbumPhoto/search-photos
+      CodeUri: ./search-photos
       Description: "Lambda function for CD Demo"
       MemorySize: 128
       Timeout: 30
@@ -22,7 +22,7 @@ Resources:
       FunctionName: index-photos
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
-      CodeUri: ./lambdaAlbumPhoto/index-photos
+      CodeUri: ./index-photos
       Description: "Lambda function for CD Demo"
       MemorySize: 128
       Timeout: 30
