--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -45,7 +45,7 @@ Resources:
     Type: 'AWS::Lambda::Permission'
     Properties:
       Action: 'lambda:InvokeFunction'
-      FunctionName: !Ref CDDemoLambda2
+      FunctionName: !Ref indexPhotos
       Principal: s3.amazonaws.com
       SourceAccount: !Ref 'AWS::AccountId'
       SourceArn: !Sub 'arn:aws:s3:::album-bucket'
