--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -1,8 +1,8 @@
-AWSTemplateFormatVersion: '2010-09-09'
+WSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: Album data
 Resources:
-  searchPhotos:
+  CDDemoLambda1:
     Type: "AWS::Serverless::Function"
     Properties:
       FunctionName: search-photos
@@ -16,7 +16,7 @@ Resources:
       Environment:
         Variables:
           REGION: us-east-1
-  indexPhotos:
+  CDDemoLambda2:
     Type: "AWS::Serverless::Function"
     Properties:
       FunctionName: index-photos
@@ -39,13 +39,13 @@ Resources:
         LambdaConfigurations:
           - Event: 's3:ObjectCreated:Put'
             Function: !GetAtt 
-              - indexPhotos
+              - CDDemoLambda2
               - Arn
   BucketPermission:
     Type: 'AWS::Lambda::Permission'
     Properties:
       Action: 'lambda:InvokeFunction'
-      FunctionName: !Ref indexPhotos
+      FunctionName: !Ref CDDemoLambda2
       Principal: s3.amazonaws.com
       SourceAccount: !Ref 'AWS::AccountId'
       SourceArn: !Sub 'arn:aws:s3:::album-bucket'
