--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -74,14 +74,14 @@ Resources:
   ServerlessRestApi:
     Type: 'AWS::ApiGateway::RestApi'
     Properties:
-      Name: AI Photo Search Cloudformation
+      Name: Album Index and Search
       Description: AI Photo Cloudformation
       BinaryMediaTypes:
         - image/png
       Body:
         swagger: '2.0'
         info:
-          title: AI Photo Search
+          title: Album Index and Search
           description: >-
             AI Photo Search application, built during the Cloud and Big Data
             course at Columbia University.
