--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -65,12 +65,6 @@ Resources:
                 - /*
             Principal: '*'
             Sid: AllowPublicRead
-  ServerlessRestApiDeploymentb2888a1f04:
-    Type: 'AWS::ApiGateway::Deployment'
-    Properties:
-      RestApiId: !Ref ServerlessRestApi
-      Description: RestApi deployment
-      StageName: Stage
   ServerlessRestApi:
     Type: 'AWS::ApiGateway::RestApi'
     Properties:
@@ -97,6 +91,29 @@ Resources:
               summary: CORS support
               description: |
                 Enable CORS by returning correct headers
+              consumes:
+                - application/json
+              produces:
+                - application/json
+              tags:
+                - CORS
+              x-amazon-apigateway-integration:
+                type: mock
+                requestTemplates:
+                  application/json: |
+                    {
+                      "statusCode" : 200
+                    }
+                responses:
+                  'default':
+                    statusCode: '200'
+                    responseParameters:
+                      method.response.header.Access-Control-Allow-Headers : "'Content-Type,X-Amz-Date,Authorization,X-Api-Key'"
+                      method.response.header.Access-Control-Allow-Methods: '''*'''
+                      method.response.header.Access-Control-Allow-Origin: '''*'''
+                    responseTemplates:
+                      application/json: |
+                        {}
               responses:
                 '200':
                   description: Default response for CORS method
@@ -107,18 +124,6 @@ Resources:
                       type: string
                     Access-Control-Allow-Methods:
                       type: string
-              x-amazon-apigateway-integration:
-                type: mock
-                responses:
-                  default:
-                    statusCode: '200'
-                    responseParameters:
-                      method.response.header.Access-Control-Allow-Headers: >-
-                        'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'
-                      method.response.header.Access-Control-Allow-Methods: '''GET,OPTIONS'''
-                      method.response.header.Access-Control-Allow-Origin: '''*'''
-                    responseTemplates:
-                      application/json: ''
             get:
               summary: photo search method
               description: >
@@ -166,6 +171,29 @@ Resources:
               summary: CORS support
               description: |
                 Enable CORS by returning correct headers
+              consumes:
+                - application/json
+              produces:
+                - application/json
+              tags:
+                - CORS
+              x-amazon-apigateway-integration:
+                type: mock
+                requestTemplates:
+                  application/json: |
+                    {
+                      "statusCode" : 200
+                    }
+                responses:
+                  default:
+                    statusCode: '200'
+                    responseParameters:
+                      method.response.header.Access-Control-Allow-Headers: 'Content-Type,X-Amz-Date,Authorization,X-Api-Key,x-amz-meta-customLabels,filename'
+                      method.response.header.Access-Control-Allow-Methods: '''*'''
+                      method.response.header.Access-Control-Allow-Origin: '''*'''
+                    responseTemplates:
+                      application/json: |
+                        {}
               responses:
                 '200':
                   description: Default response for CORS method
@@ -176,20 +204,6 @@ Resources:
                       type: string
                     Access-Control-Allow-Methods:
                       type: string
-              x-amazon-apigateway-integration:
-                type: mock
-                responses:
-                  default:
-                    statusCode: '200'
-                    responseParameters:
-                      method.response.header.Access-Control-Allow-Headers: >-
-                        'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,x-amz-meta-customLabels,filename'
-                      method.response.header.Access-Control-Allow-Methods: '''OPTIONS,PUT'''
-                      method.response.header.Access-Control-Allow-Origin: '''*'''
-                    responseTemplates:
-                      application/json: ''
-                    requestTemplates:
-                      application/json: ''
             put:
               summary: photo upload method
               description: >
@@ -275,6 +289,12 @@ Resources:
                 format: int32
               message:
                 type: string
+  ServerlessRestApiDeploymentb2888a1f04:
+    Type: 'AWS::ApiGateway::Deployment'
+    Properties:
+      RestApiId: !Ref ServerlessRestApi
+      Description: RestApi deployment
+      StageName: Stage
   searchPhotosLambdaAPIPermissionProd:
     Type: 'AWS::Lambda::Permission'
     Properties:
