--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -193,20 +193,8 @@ Resources:
                     responseTemplates:
                       application/json: ''
                     requestTemplates:
-                      application/json: ''
-              x-amazon-apigateway-gateway-responses:
-                DEFAULT_4XX:
-                  responseParameters:
-                    gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
-                    gatewayresponse.header.Access-Control-Allow-Methods: '''OPTIONS,PUT'''
-                    gatewayresponse.header.Access-Control-Allow-Methods: >-
-                      'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'
-                DEFAULT_5XX:
-                  responseParameters:
-                    gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
-                    gatewayresponse.header.Access-Control-Allow-Methods: '''OPTIONS,PUT'''
-                    gatewayresponse.header.Access-Control-Allow-Methods: >-
-                      'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'
+                      application/json: |
+                        {"statusCode": 200}
             put:
               summary: photo upload method
               description: >
