--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -113,6 +113,11 @@ Resources:
                       type: string
               x-amazon-apigateway-integration:
                 type: mock
+                requestTemplates:
+                  application/json: |
+                    {
+                      "statusCode" : 200
+                    }
                 responses:
                   default:
                     statusCode: '200'
@@ -182,6 +187,11 @@ Resources:
                       type: string
               x-amazon-apigateway-integration:
                 type: mock
+                requestTemplates:
+                  application/json: |
+                    {
+                      "statusCode" : 200
+                    }
                 responses:
                   default:
                     statusCode: '200'
@@ -192,9 +202,6 @@ Resources:
                       method.response.header.Access-Control-Allow-Origin: '''*'''
                     responseTemplates:
                       application/json: ''
-                    requestTemplates:
-                      application/json: |
-                        {"statusCode": 200}
             put:
               summary: photo upload method
               description: >
