--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -12,7 +12,7 @@ Resources:
       Description: "Lambda function for CD Demo"
       MemorySize: 128
       Timeout: 30
-      Role: "arn:aws:iam::269578278636:role/admin-lambda-role"
+      Role: !GetAtt LambdaExecutionRole.Arn
       Environment:
         Variables:
           REGION: us-east-1
@@ -26,7 +26,7 @@ Resources:
       Description: "Lambda function for CD Demo"
       MemorySize: 128
       Timeout: 30
-      Role: "arn:aws:iam::269578278636:role/admin-lambda-role"
+      Role: !GetAtt LambdaExecutionRole.Arn
       Environment:
         Variables:
           REGION: us-east-1
@@ -340,3 +340,31 @@ Resources:
       ElasticsearchClusterConfig:
         InstanceCount: 1
         InstanceType: t3.small.elasticsearch
+  LambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service:
+            - lambda.amazonaws.com
+          Action:
+          - sts:AssumeRole
+      Path: "/"
+      Policies:
+      - PolicyName: hw2photoupload
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+            - logs:*
+            - ses:*
+            - s3:*
+            - cloudwatch:*
+            - rekognition:*
+            - lex:*
+            - es:*
+            Resource: '*'
