--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -101,6 +101,10 @@ Resources:
               summary: CORS support
               description: |
                 Enable CORS by returning correct headers
+              consumes:
+              - "application/json"
+              produces:
+              - "application/json"
               responses:
                 '200':
                   description: Default response for CORS method
@@ -118,6 +122,7 @@ Resources:
                     {
                       "statusCode" : 200
                     }
+                passthroughBehavior: "when_no_match"
                 responses:
                   default:
                     statusCode: '200'
@@ -158,6 +163,8 @@ Resources:
                   description: Unexpected error
                   schema:
                     $ref: '#/definitions/Error'
+              security:
+              - api_key: []
               x-amazon-apigateway-integration:
                 httpMethod: POST
                 responses:
@@ -175,6 +182,10 @@ Resources:
               summary: CORS support
               description: |
                 Enable CORS by returning correct headers
+              consumes:
+              - "application/json"
+              produces:
+              - "application/json"
               responses:
                 '200':
                   description: Default response for CORS method
@@ -187,6 +198,7 @@ Resources:
                       type: string
               x-amazon-apigateway-integration:
                 type: mock
+                passthroughBehavior: "when_no_match"
                 requestTemplates:
                   application/json: |
                     {
@@ -198,8 +210,8 @@ Resources:
                     responseParameters:
                       method.response.header.Access-Control-Allow-Headers: >-
                         'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,x-amz-meta-customLabels,filename'
-                      method.response.header.Access-Control-Allow-Methods: '''OPTIONS,PUT'''
-                      method.response.header.Access-Control-Allow-Origin: '''*'''
+                      method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
+                      method.response.header.Access-Control-Allow-Origin: "'*'"
                     responseTemplates:
                       application/json: ''
             put:
@@ -209,9 +221,9 @@ Resources:
                 and uploads it to an S3 bucket.
               operationId: uploadPhoto
               consumes:
-                - image/png
-                - image/jpg
-                - image/jpeg
+              - "application/json"
+              produces:
+              - "application/json"
               parameters:
                 - name: Content-Type
                   in: header
@@ -225,8 +237,6 @@ Resources:
                   in: header
                   required: false
                   type: string
-              produces:
-                - application/json
               responses:
                 '200':
                   description: S3 PUT operation response
@@ -243,13 +253,15 @@ Resources:
                   description: Unexpected error
                   schema:
                     $ref: '#/definitions/Error'
+              security:
+              - api_key: []
               x-amazon-apigateway-integration:
                 credentials: 'arn:aws:iam::269578278636:role/photo_upload'
                 responses:
                   default:
                     statusCode: '200'
                     responseParameters:
-                      method.response.header.Access-Control-Allow-Origin: '''*'''
+                      method.response.header.Access-Control-Allow-Origin: "'*'"
                     responseTemplates:
                       application/json: ''
                 requestParameters:
@@ -264,6 +276,11 @@ Resources:
                   application/json: ''
                 httpMethod: PUT
                 type: aws
+        securityDefinitions:
+          api_key:
+            type: "apiKey"
+            name: "x-api-key"
+            in: "header"
         definitions:
           SearchResponse:
             type: object
@@ -289,6 +306,17 @@ Resources:
                 format: int32
               message:
                 type: string
+        x-amazon-apigateway-gateway-responses:
+          DEFAULT_5XX:
+            responseParameters:
+              gatewayresponse.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
+              gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+              gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,x-amz-meta-customLabels,filename'"
+          DEFAULT_4XX:
+            responseParameters:
+              gatewayresponse.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
+              gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+              gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,x-amz-meta-customLabels,filename'"
   searchPhotosLambdaAPIPermissionProd:
     Type: 'AWS::Lambda::Permission'
     Properties:
