added cors option

--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -65,6 +65,34 @@ Resources:
                 - /*
             Principal: '*'
             Sid: AllowPublicRead
+  ApiKey: 
+    Type: AWS::ApiGateway::ApiKey
+    Properties: 
+      Name: !Join ["", [{"Ref": "AWS::StackName"}, "-apikey"]]
+      Description: "CloudFormation API Key V1"
+      Enabled: true
+      GenerateDistinctId: false
+      Value: bkcDSDSWc35Jyb80ywbiH81X8NtvhBUK2229T8mY
+  ApiUsagePlan:
+    Type: "AWS::ApiGateway::UsagePlan"
+    Properties:
+      ApiStages: 
+      - ApiId: !Ref ServerlessRestApi
+        Stage: !Ref ServerlessRestApiDeploymentb2888a1f04    
+      Description: !Join [" ", [{"Ref": "AWS::StackName"}, "usage plan"]]
+      Quota:
+        Limit: 2000
+        Period: MONTH
+      Throttle:
+        BurstLimit: 10
+        RateLimit: 10
+      UsagePlanName: !Join ["", [{"Ref": "AWS::StackName"}, "-usage-plan"]]
+  ApiUsagePlanKey:
+    Type: "AWS::ApiGateway::UsagePlanKey"
+    Properties:
+      KeyId: !Ref ApiKey
+      KeyType: API_KEY
+      UsagePlanId: !Ref ApiUsagePlan
   ServerlessRestApiDeploymentb2888a1f04:
     Type: 'AWS::ApiGateway::Deployment'
     Properties:
