--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -75,11 +75,11 @@ Resources:
       Value: bkcDSDSWc35Jyb80ywbiH81X8NtvhBUK2229T8mY
   ApiUsagePlan:
     Type: "AWS::ApiGateway::UsagePlan"
-    DependsOn: ServerlessRestApiDeploymentb2888a1f04
+    DependsOn: ServerlessRestApi
     Properties:
       ApiStages: 
       - ApiId: !Ref ServerlessRestApi
-        Stage: !Ref ServerlessRestApiDeploymentb2888a1f04.Stage    
+        Stage: Stage 
       Description: !Join [" ", [{"Ref": "AWS::StackName"}, "usage plan"]]
       Quota:
         Limit: 2000
