--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -285,7 +285,7 @@ Resources:
               security:
               - api_key: []
               x-amazon-apigateway-integration:
-                credentials: 'arn:aws:iam::269578278636:role/photo_upload'
+                credentials: !GetAtt ApiGateWayExecutionRole.Arn
                 responses:
                   default:
                     statusCode: '200'
@@ -425,3 +425,27 @@ Resources:
             - lex:*
             - es:*
             Resource: '*'
+  ApiGateWayExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service:
+            - apigateway.amazonaws.com
+            - s3.amazonaws.com
+          Action:
+          - sts:AssumeRole
+      Path: "/"
+      Policies:
+      - PolicyName: hw2apigateway
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+            - logs:*
+            - s3:*
+            - apigateway:*
