--- a/photoAppTemplate.yaml
+++ b/photoAppTemplate.yaml
@@ -75,7 +75,9 @@ Resources:
       Value: bkcDSDSWc35Jyb80ywbiH81X8NtvhBUK2229T8mY
   ApiUsagePlan:
     Type: "AWS::ApiGateway::UsagePlan"
-    DependsOn: ServerlessRestApi
+    DependsOn: 
+    - ServerlessRestApi
+    - ServerlessRestApiDeploymentb2888a1f04
     Properties:
       ApiStages: 
       - ApiId: !Ref ServerlessRestApi
